again fix button alignment on main page

--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ main #rightcolumn {
 }
 
 .icon {
-	padding: 0px 25px 0px 20px;
+	padding: 0px 25px 0px 5px;
 }
 
 .bullet {
